--- a/about.html
+++ b/about.html
@@ -2,14 +2,37 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>O nas</title>
+  <title>O nas – Sklep Programisty</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 p-6">
-  <a href="index.html" class="text-blue-600 underline mb-4 inline-block">← Powrót</a>
-  <h1 class="text-2xl font-bold mb-4">O nas</h1>
-  <p class="text-gray-700 max-w-xl">
-    Jesteśmy pasjonatami programowania i technologii. Nasz sklep oferuje unikalne gadżety dla programistów, informatyków i geeków.
-  </p>
+<body class="bg-gray-100 min-h-screen flex flex-col">
+  <!-- Nawigacja -->
+  <nav class="bg-white shadow p-4 flex justify-between items-center">
+    <h1 class="text-2xl font-bold">🛒 Sklep Programisty</h1>
+    <ul class="flex gap-6 text-lg">
+      <li><a href="index.html" class="hover:text-blue-600">Strona główna</a></li>
+      <li><a href="about.html" class="text-blue-600 font-semibold">O nas</a></li>
+      <li><a href="contact.html" class="hover:text-blue-600">Kontakt</a></li>
+    </ul>
+  </nav>
+
+  <!-- Sekcja "O nas" -->
+  <main class="flex-1 p-6 max-w-3xl mx-auto">
+    <div class="bg-white rounded shadow p-6">
+      <h2 class="text-2xl font-bold mb-4">Kim jesteśmy?</h2>
+      <p class="text-gray-700 mb-4 leading-relaxed">
+        ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+      <h3 class="text-xl font-semibold mt-6 mb-2">Dlaczego to robimy?</h3>
+      <p class="text-gray-700 leading-relaxed">
+        ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+    </div>
+  </main>
+
+  <!-- Stopka -->
+  <footer class="bg-gray-800 text-white text-center p-4">
+    © 2025 Sklep Programisty – Wszelkie prawa zastrzeżone.
+  </footer>
 </body>
 </html>
