aktaulizacja danych w contact.html

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <p class="mb-4 text-gray-700">Masz pytania? Skontaktuj się z nami mailowo:</p>
 
     <div class="bg-white p-6 rounded shadow">
-      <p class="mb-2"><strong>📧 Email:</strong> <a href="mailto:twoj@email.com" class="text-blue-600 underline">twoj@email.com</a></p>
+      <p class="mb-2"><strong>📧 Email:</strong> <a href="kamilpusiu2008@email.com" class="text-blue-600 underline">kamilpusiu2008@email.com</a></p>
       <p class="mb-2"><strong>📞 Telefon:</strong> +48 123 456 789</p>
       <p><strong>📍 Adres:</strong> Polska, Internetowa 1</p>
     </div>
